# agent-interact

./: README.md  pyproject.toml
agent_interact/: main.py
agent_interact/saved_index/: docstore.json  index_store.json
agent_interact/saved_index_faq/: default__vector_store.json  docstore.json  index_store.json
agent_interact/utils/: assessment_schema.py  faq_schema.py  schemanew.py
agent_interact/utils/saved_index/: default__vector_store.json  docstore.json  index_store.json
