[tool.poetry]
name = "agent-interact"
version = "0.1.0"
description = ""
authors = ["Vyoman Jain <75789232+VyoJ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
groq = "^0.11.0"
llama-index = "^0.11.14"
llama-index-llms-groq = "^0.2.0"
llama-index-embeddings-jinaai = "^0.3.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.31.0"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
